--- a/RestaurantManagement/RestaurantManagement.csproj
+++ b/RestaurantManagement/RestaurantManagement.csproj
@@ -30,4 +30,11 @@
 	  <ProjectReference Include="..\RestaurantManagement.Services\RestaurantManagement.Services.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="Views\Tables\Delete.cshtml">
+	    <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
